# proto-rust

./: Cargo.toml  Makefile  build.rs
proto/: greet.proto
src/greet/: client.rs  server.rs
src/grpc-web/: client.rs  server.rs
src/helloworld/: server.rs
src/routeguide/: client.rs  server.rs
