[package]
name = "protobuf-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.5.0"
prost = "0.8.0"
tokio = { version = "1.9.0", features = [
    "rt-multi-thread",
    "time",
    "fs",
    "macros",
    "net",
] }

[build-dependencies]
tonic-build = "0.5.1"

[[bin]]
name = "helloworld-server"
path = "src/helloworld/server.rs"

[[bin]]
name = "helloworld-client"
path = "src/helloworld/client.rs"
