[package]
name = "protobuf-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.5.0"
prost = "0.8.0"
tokio = { version = "1.9.0", features = [
    "rt-multi-thread",
    "time",
    "fs",
    "macros",
    "net",
] }
futures = { version = "0.3.16", default-features = false, features = ["alloc"] }
rand = "0.8.4"
tokio-stream = { version = "0.1.7", features = ["net"] }
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
async-stream = "0.3.2"

[build-dependencies]
tonic-build = "0.5.1"

[[bin]]
name = "helloworld-server"
path = "src/helloworld/server.rs"

[[bin]]
name = "helloworld-client"
path = "src/helloworld/client.rs"

[[bin]]
name = "routeguide-server"
path = "src/routeguide/server.rs"

[[bin]]
name = "routeguide-client"
path = "src/routeguide/client.rs"
