[package]
name = "protobuf-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.5.0"
prost = "0.8.0"
tokio = { version = "1.9.0", features = [
    "rt-multi-thread",
    "time",
    "fs",
    "macros",
    "net",
] }
futures = { version = "0.3.16", default-features = false, features = ["alloc"] }
async-stream = "0.3.2"
tokio-stream = { version = "0.1.7", features = ["net"] }
tower = "0.4.8"
# Required for routeguide
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
rand = "0.8.4"
# grpc-web
tonic-web = "0.1.0"
bytes = "1.0.1"
http = "0.2.4"
hyper = { version = "0.14.11", features = ["full"] }
tracing-subscriber = { version = "0.2.19", features = ["tracing-log"] }

[build-dependencies]
tonic-build = "0.5.1"

[[bin]]
name = "helloworld-server"
path = "src/helloworld/server.rs"

[[bin]]
name = "helloworld-client"
path = "src/helloworld/client.rs"

[[bin]]
name = "routeguide-server"
path = "src/routeguide/server.rs"

[[bin]]
name = "routeguide-client"
path = "src/routeguide/client.rs"

[[bin]]
name = "grpc-web-server"
path = "src/grpc-web/server.rs"

[[bin]]
name = "grpc-web-client"
path = "src/grpc-web/client.rs"

[[bin]]
name = "greet-client"
path = "src/greet/client.rs"

[[bin]]
name = "greet-server"
path = "src/greet/server.rs"
